--- a/docs/design.css
+++ b/docs/design.css
@@ -282,16 +282,23 @@ background: linear-gradient(90deg, rgba(0,52,9,1) 0%, rgba(0,46,9,1) 100%);*/
 }
 
 /* Spielerei um iframe zu zentrieren */
-.centered-div {
-    width: 560px; 
-    height: 315px; 
+ .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%;
+            padding-top: 30px;
+            height: 0;
+            overflow: hidden;
+        }
 
-    position: relative; 
-    top: 0; right: 0; 
-    bottom: 0; left: 0;
-    margin: auto; 
-}
-
+        .video-wrapper iframe,  
+        .video-wrapper object,  
+        .video-wrapper embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
 /* ------------------ Ende Wrapper ------------------ */
 
 
