--- a/docs/design.css
+++ b/docs/design.css
@@ -224,9 +224,33 @@ background: linear-gradient(90deg, rgba(0,52,9,1) 0%, rgba(0,46,9,1) 100%);*/
 
 /* ------------------ Ende Header ------------------ */
 
+/* ------------------ Grid Container Webshop ------------------ */
 
+}
 
+.container{
+	margin: 20px auto;
+	width:400px;
+	height:400px;
+	background-color:#fff;
+	display:grid;
+	grid-template-columns: 1fr 1fr;
+	grid-row: auto auto;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+.box{
+    background-color:#333;
+    padding:20px;
+    border-radius:10px;
+    color:#fff;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:40px;
+    font-family:sans-serif;
+  }
 
+}
 
 
 /* ------------------ Start Wrapper ------------------ */
