--- a/docs/design.css
+++ b/docs/design.css
@@ -23,42 +23,52 @@ src: url("https://fontsgeek.com/copperplate-font");
   .sidenav a {font-size: 18px;}
 } 
 
+.burgermenu {
+    margin-top: 25px;
+    font-size: 50px;
+    cursor: pointer;
+    position: absolute;
+}
+
 /* The side navigation menu */
 .sidenav {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    border-radius: 15px 15px 15px 15px;
+    margin-top: 25px;
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: relative;
+    z-index: 1;
+    left: 0;
+    background-color: #232941;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.3s;
 }
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+    border-bottom: 1px solid #1685DE;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    display: block;
+    transition: 0.3s;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color: #f1f1f1;
+    color: black;
+    background-color: #1685DE;
 }
 
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
@@ -258,6 +268,8 @@ src: url("https://fontsgeek.com/copperplate-font");
 /* Wrapper für Website */
 .wrapper {
     min-height: calc(100vh - 5em - 6px);
+    display: flex;
+    flex-direction: row;
 }
 
 /* Content Wrapper für Inhalt */
