--- a/docs/design-930.css
+++ b/docs/design-930.css
@@ -52,6 +52,9 @@ src: url("https://fontsgeek.com/copperplate-font");
 		display: block;
 		overflow-x: auto;
 	}
+	.footer-headline-txt {
+		font-size:0;
+	}
 }
 @media only screen and (max-width: 767px) {
     .sidenav {
