--- a/docs/design.css
+++ b/docs/design.css
@@ -9,7 +9,7 @@ html, body {
 
 @font-face {
 font-family: Garamond;
-src: url("https://allfont.de/allfont.css?fonts=garamond");
+src: url("https://fonts.google.com/specimen/EB+Garamond?query=Gara#standard-styles");
 }
 
 @font-face {
