--- a/docs/design.css
+++ b/docs/design.css
@@ -241,7 +241,7 @@ src: url("https://fontsgeek.com/copperplate-font");
 /* ------------------ Webshop ------------------ */
 
 
-webshop {
+.webshop {
     margin: 20px auto 20px auto;
     border: 2px solid #1685DE;
     display: flex;
