--- a/docs/design-930.css
+++ b/docs/design-930.css
@@ -53,7 +53,7 @@ src: url("https://fontsgeek.com/copperplate-font");
 		overflow-x: auto;
 	}
 	.footer-headline-txt {
-		font-size:0;
+		display:none;
 	}
 }
 @media only screen and (max-width: 767px) {
