--- a/docs/design.css
+++ b/docs/design.css
@@ -19,7 +19,7 @@ src: url("https://fontsgeek.com/copperplate-font");
 
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
+@media screen and (max-height: 28em) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 } 
